<?xml version="1.0"?>
<package format="3">
  <name>robot_task_manager</name>
  <version>0.0.0</version>
  <description>ROS2 learning and robotic task execution package</description>
  <maintainer email="root@todo.todo">root</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>example_interfaces</depend>
  <depend>action_msgs</depend>
  <depend>robot_interfaces</depend>

  <exec_depend>setuptools</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>




